# FStitch

./: .gitignore  README.md  configure.ac  parameters_DMSO  setup.sh
FStitch/: README.md
FStitch/FastReadStitcher/: setup.sh~
FStitch/FastReadStitcher/src/: BaumWelch.cpp  FStitch  Makefile  NewtonsMethod.cpp  grabTrainingExamples.cpp  viterbi.cpp  viterbi.h
FastReadStitcher/: setup.sh
FastReadStitcher/src/: BaumWelch.cpp  BaumWelch.h  FStitch  Makefile  Makefile~  NewtonsMethod.h  grabTrainingExamples.cpp  grabTrainingExamples.h  interval_tree.cpp  interval_tree.h  main.cpp  main_segment.cpp  main_train.cpp  main_train.h  read.cpp  read.h  read_in_parameters.cpp  read_in_parameters.h  split.cpp  split.h  viterbi.cpp  viterbi.h  write.cpp  write.h
examples/: TEST_DMSO2_3.pos.BedGraph  TEST_DMSO2_3.pos.BedGraph~
src/: BaumWelch.h  FStitch  MAP_Decoding.h  MEMM_class.h  MEMM_class.h~  MLE.h~  Makefile  Makefile.am  Makefile~  NewtonsMethod.cpp  NewtonsMethod.h  SeperateByStrand.h  baum_welch.h  eRNA.h  example.h  extract_file_from_path.h  functions.h  grabTrainingData.h  grabTrainingExamples.h  grab_segments.h  help.h  histogram.h  link.h  link.h~  main.cpp  main_segment.cpp  main_segment.h  main_train.cpp  modelParameters.h  read.cpp  read.h  readIn.h  readIn.h~  readInParameters.h  readInRefGene.h  read_in_parameters.cpp  search_for_files.h  segment  simulateGMM.h  split.cpp  (+11 more)
